// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link with all possible props matches the snapshot 1`] = `
<a
  className="block link block__link"
  href="/path"
  onClick={[Function]}
>
  Link
</a>
`;

exports[`Link with default props matches the snapshot 1`] = `
<a
  className="link"
  href="/path"
  onClick={[Function]}
>
  Link
</a>
`;
